assets/css/app.css
@font-face {
  font-family: "Lora";
  src: local("loraregular"), url("/assets/fonts/lora-regular-webfont.woff2") format("woff2"), url("assets/fonts/lora-regular-webfont.woff") format("woff");
  font-style: normal;
  font-weight: normal;
  font-display: swap;
}

body {
  overflow-x: hidden;
  background-color: #f4f5f6;
}

/* -----------------------------------------------NAVBAR------------------------------------------------------ */

#topbar {
  width: 100%;
  position: fixed;
  top: 0;
  left: 0;
  z-index: 20;
}

#topbar > div {
  width: 100%;
  position: absolute;
  top: 0;
  transition: all 0.3s ease-out;
}

.navbar {
  background: #f72210;
  fill: #fff;
  height: 50px;
  padding: 0;
  color: #fff;
}

.navbar > label {
  margin: 0;
}

.navbar .menu-icon {
  height: 50px;
  width: 50px;
  opacity: 0.5;
  font-size: 26px;
}

.navbar .menu-icon:hover {
  cursor: pointer;
}

.navbar-brand {
  padding-left: 15px;
}

.navbar-brand > svg {
  height: 20px;
  widows: 132px;
}

.signup {
  font-family: "Roboto Condensed", sans-serif;
  font-size: 14px;
  font-weight: bold;
}

.signup a {
  box-sizing: content-box;
  padding: 6px 3px;
  text-decoration: none;
}

.signup a:nth-child(1) {
  color: #fff;
}

.signup a:nth-child(2) {
  color: #f72210;
  background: #fff;
}

.navbar > label i:nth-child(1) {
  display: initial;
}

.navbar > label i:nth-child(2) {
  display: none;
}

#nav-open:checked ~ label i:nth-child(1) {
  display: none;
}

#nav-open:checked ~ label i:nth-child(2) {
  display: initial;
}

#nav-open:checked ~ .navbar-nav {
  right: 0;
  opacity: 1;
}

.navbar-nav {
  top: 50px;
  right: -220px;
  width: 220px;
  height: calc(100vh - 50px);
  opacity: 0;
  transition: all 0.3s ease-out;
  z-index: 100;
  background: #fff;
}

.navbar-nav form input {
  padding: 0;
  border: 0;
  flex: 1;
  min-width: 120px;
  opacity: 0.5;
}

.navbar-nav form label {
  display: flex;
  justify-content: center;
  align-items: center;
  flex: none;
  height: 24px;
  width: 24px;
  margin: 0;
  color: #000;
  opacity: 0.4;
  cursor: text;
}

.navbar-nav ul {
  font-size: 21px;
  font-weight: bold;
  font-family: "Roboto Condensed", sans-serif;
  list-style: none;
}

.navbar-nav a {
  color: #000;
  text-decoration: none;
}

.navbar-nav a span:nth-child(2) {
  font-weight: normal;
  color: rgba(0, 0, 0, 0.4);
}

.navbar-nav li:hover {
  background: #000;
}

.navbar-nav li:hover a {
  color: #fff;
}

.navbar-nav li:hover span:nth-child(2) {
  color: #f72210;
}

header .brand {
  background: #f72210;
  padding: 20px 10px 15px;
  color: #fff;
  font-family: "Roboto Condensed", sans-serif;
}

header .brand > div {
  width: 33%;
}

header svg {
  width: 396px;
  height: 60px;
  fill: #fff;
}

header .subscribe {
  font-size: 18px;
}

header .subscribe a:hover {
  text-decoration: none;
}

header .subscribe span:last-child {
  color: #f72210;
}

header .nav {
  padding-right: 160px;
}

header .nav > div:not(.fill) {
  box-sizing: content-box;
  border-right: 1px solid #c2d4d7;
  text-align: center;
  flex: 1 0 auto;
  font-family: "Roboto Condensed", sans-serif;
  font-size: 21px;
  font-weight: bold;
  z-index: 5;
}

header .nav a {
  color: #000;
}

header .nav a:hover {
  color: #f72210;
  text-decoration: none;
}

header .searchfield {
  width: 100%;
  padding-left: 0.25rem;
}

header #searchbox {
  flex: 0 0 auto;
  width: 60px;
  border: none;
  padding: 4px;
  left: 0;
  transition: flex 0.2s ease-out;
  z-index: 10;
}

header #searchbox::placeholder {
  color: #666;
}

header #searchbox:focus {
  flex: 1 0 auto;
}

header .searchfield i {
  display: inline-block;
  width: 94px;
}

header .searchfield i::before {
  margin-left: 0.25rem;
}

header .nav .fill {
  position: absolute;
  top: 0;
  right: 0;
  width: 78px;
  height: 13px;
  border-top: 13px solid #f72210;
  border-left: 13px solid #fff;
  z-index: 10;
}

/* -----------------------------------------------MAIN CONTENT------------------------------------------------------ */

main {
  font-family: Arial, Helvetica, sans-serif;
  font-size: 13px;
  color: #333;
  background: #fff;
  margin-top: 50px;
}

main h2 {
  font-size: 22px;
}

main h3 {
  font-size: 17px;
}

main h4 {
  font-size: 16px;
  font-family: "Roboto Condensed", sans-serif;
  color: rgba(3, 3, 3, 0.4);
  font-weight: bold;
}

main h2 a,
main h3 a {
  font-family: "Roboto Condensed", sans-serif;
  font-weight: bold;
  color: #000;
  text-decoration: none;
}

main h2 a:hover,
main h3 a:hover {
  text-decoration: underline #f72210;
  color: #000;
}

.img-caption {
  background: rgba(255, 255, 255, 0.8);
  bottom: 0;
  left: 0;
  text-align: center;
}

figure a {
  text-decoration: none;
  font-family: "Roboto Condensed", sans-serif;
  font-size: 17px;
  font-weight: bold;
  color: #f72210;
  width: 100%;
}

figure a:hover {
  color: #f72210;
  text-decoration: none;
}

.more-stories figure {
  width: 135px;
  overflow: hidden;
}

.more-stories figure img {
  width: 100%;
}

.more-stories p {
  margin: 0;
}

.culture {
  background: #f4f5f7;
}

.culture figure {
  width: 100%;
}

.culture figure img {
  width: 100%;
}

.culture h2 a {
  font-family: 'Lora', serif;
  font-weight: normal;
  font-size: 20px;
  color: #272727;
}

.culture h2 a:hover {
  text-decoration: none;
  color: #272727;
}

.culture p {
  font-size: 15px;
  font-family: "Helvetica Neue", "Helvetica", Arial, sans-serif;
  color: rgba(39, 39, 39, 0.5);
}

.culture span a {
  color: #272727;
  background: #c2d4d7;
}

.culture span a:hover {
  background: #272727;
  color: #c2d4d7;
  text-decoration: none;
}

.sponsor figure {
  margin: 0;
}

.sponsor figure a {
  color: #3581f4;
}

.opinion h3 a:hover {
  text-decoration: none;
  color: #f72210;
}

.opinion span {
  font-family: "Roboto Condensed", sans-serif;
  font-size: 14px;
  font-weight: bold;
  color: #555;
}

.latest-news figure {
  width: 135px;
  display: flex;
  align-items: center;
  overflow: hidden;
}

.latest-news figure img {
  width: 100%;
}

.latest-news h3 a:hover {
  text-decoration: none;
  color: #f72210;
}

.ad-mag figure img {
  width: 100%;
}

.ad-mag > a {
  padding: 10px;
  background-color: #f4f5f6;
  text-align: center;
  font-family: "Roboto Condensed", sans-serif;
  font-size: 18px;
  font-weight: bold;
  color: #000;
}

.ad-mag a:hover {
  background-color: #dbdcdd;
  text-decoration: none;
}

[class^="in-mag"] .content article img {
  width: 100%;
}

[class^="in-mag"] .content span {
  padding: 0.25rem 0.5rem;
  font-family: "Roboto Condensed", sans-serif;
  font-size: 16px;
  font-weight: bold;
}

[class^="in-mag"] .content span:first-of-type {
  background: #f72210;
  color: #fff;
}

[class^="in-mag"] .content span:last-of-type a {
  color: #f72210;
}

[class^="in-mag"] span > a:hover {
  text-decoration: none;
}

.content h2 {
  font-family: "Roboto Condensed", sans-serif;
  font-size: 19px;
  font-weight: bold;
}

.content h2 img {
  width: 29px;
  background: #f72210;
}

.in-mag-bot article:last-of-type a {
  display: block;
}

.in-mag-bot article:last-of-type span {
  bottom: 0;
  left: 0;
}

.slideshow figcaption i {
  font-size: 28px;
}

.slideshow figcaption span {
  font-size: 14px;
  position: relative;
  left: -1.3em;
  top: -0.55em;
}

.other-sections h2 a {
  color: #f72210;
}

.other-sections h2 a:hover {
  text-decoration: none;
  color: #f72210;
}

.other-sections h3 {
  font-size: 18px;
}

.int-promo h3 {
  font-family: "Roboto Condensed", sans-serif;
  font-weight: bold;
  color: #000;
  font-size: 20px;
}

main .int-promo h4 {
  color: #f72210;
}

.int-promo .subscribe > div {
  background: #f4f5f6;
}

.int-promo p {
  font-size: 15px;
}

.int-promo a:hover {
  text-decoration: none;
}

.int-promo span {
  background-color: #f72210;
  color: #fff;
  font-family: "Roboto Condensed", sans-serif;
  font-weight: bold;
  font-size: 18px;
}

.int-promo span:hover {
  background: #de1f0e;
}

.newsletter figure {
  width: 100%;
  height: 160px;
}

.newsletter figure img {
  width: 100%;
}

footer .brand svg {
  width: 236px;
  height: 36px;
  fill: #f72210;
}

footer .brand span {
  font-family: Arial, Helvetica, sans-serif;
  font-size: 12px;
  color: #666;
}

footer .brand ul {
  list-style: none;
  padding: 0;
  margin: 0;
}

footer .brand li {
  display: inline-block;
}

footer .brand li a {
  font-size: 26px;
  margin-right: 0.5rem;
  color: #666;
}

footer .brand li:nth-child(1) a:hover {
  color: #3b5998;
}

footer .brand li:nth-child(2) a:hover {
  color: #00acee;
}

footer .brand li:nth-child(3) a:hover {
  color: #3f729b;
}

footer .brand li:nth-child(4) a:hover {
  color: #34526f;
}

footer .brand li:nth-child(5) a:hover {
  color: #0072b1;
}

footer .brand li:nth-child(4) a i {
  transform: scale(0.8);
}

footer .footer-links {
  font-family: Arial, Helvetica, sans-serif;
  font-size: 14px;
}

footer .footer-links span {
  font-weight: bold;
  padding-top: 0.25rem;
}

footer .footer-links ul {
  list-style: none;
  padding: 0;
  margin: 0;
}

footer .footer-links li {
  display: inline-block;
  padding: 0.25rem 0.5rem 0.25rem 0;
}

footer .footer-links a {
  color: #666;
  padding-right: 0.5rem;
  box-sizing: content-box;
}

footer .footer-links a:hover {
  color: #000;
  text-decoration: none;
}

@media (min-width: 576px) {
  .more-stories figure {
    width: 258px;
  }

  .latest-news figure {
    width: 258px;
  }
}

@media (min-width: 768px) {
  .more-stories figure {
    width: 135px;
  }

  .latest-news figure {
    width: 135px;
  }

  main .bottom-col {
    max-width: 330px;
    margin: auto;
  }

  .culture article {
    width: 50%;
  }

  .ad-mag {
    width: 25%;
    padding: 1rem;
  }

  .content h2,
  .content h3 {
    font-size: 20px;
  }

  .in-mag-top .content {
    width: 75%;
  }

  .in-mag-top .content article {
    width: 33.33%;
    padding: 1rem;
  }

  .in-mag-bot article {
    width: 25%;
    padding: 1rem;
  }

  .slideshow article {
    width: 33.33%;
  }

  .other-sections section > div:first-of-type {
    width: 66%;
  }

  .other-sections section > div:last-of-type {
    width: 34%;
  }

  .other-sections h3 a {
    font-size: 17px;
  }

  .int-promo .subscribe figure {
    width: unset;
    height: 241px;
  }

  .int-promo .subscribe img {
    width: unset;
    height: 100%;
  }

  .int-promo .newsletter figure {
    width: 191px;
    height: unset;
  }

  .int-promo .newsletter img {
    width: unset;
    height: 100%;
  }

  footer .footer-links li:not(:last-of-type) > a {
    border-right: 1px solid #d9d9d9;
  }
}

@media (min-width: 992px) {
  header {
    border-bottom: 1px solid #c2d4d7;
  }

  #topbar {
    top: -50px;
  }

  #topbar a:last-of-type.active ~ div {
    top: 50px;
  }

  main {
    border-top: 1px solid #c2d4d7;
    margin-top: 0;
  }

  .editors-pick h2 a {
    font-size: 24px;
  }

  .int-promo section {
    padding: 1rem;
  }

  .int-promo .subscribe {
    flex: 1;
  }

  .int-promo .newsletter {
    flex: 1;
    max-width: 400px;
  }
}

